fix styles radio buttons

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Document</title>
+    <title>ToDo</title>
 </head>
 
 <body>
@@ -24,16 +26,24 @@
                 <div>
                     <p>What's on your todo list?</p>
                     <label class="todo-label" for="input">
-                        <input class="todo-input" type="text" id="input" placeholder="new todo" name="todo">
+                        <input class="todo-input" type="text" id="input" placeholder="e.g. get a milk" name="todo">
                     </label>
                 </div>
                 <div>
                     <p>Pick a category</p>
                     <div class="radio-block">
-                        <label class="radio business" for="business"><input class="business-radio input-radio"
-                                type="radio" id="business" value="business" name="business-personal">Business</label>
-                        <label class="radio personal" for="personal"><input class="personal-radio input-radio"
-                                type="radio" id="personal" value="personal" name="business-personal">Personal</label>
+                        <label class="radio" for="business">
+                            <input class="business-radio" type="radio" id="business" value="business"
+                                name="business-personal">
+                            <span class="circle business"></span>
+                            <div>Business</div>
+                        </label>
+                        <label class="radio" for="personal"><input class="personal-radio" type="radio" id="personal"
+                                value="personal" name="business-personal">
+                            <span class="circle personal"></span>
+                            <div>Personal</div>
+
+                        </label>
                     </div>
                 </div>
                 <button class="btn" id="btn" type="submit">Add todo</button>
